[package]
name = "gw-mem-pool"
version = "1.8.0-rc2"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gw-types = { path = "../../gwos/crates/types" }
gw-common = { path = "../../gwos/crates/common" }
gw-challenge = { path = "../challenge" }
gw-generator = { path = "../generator" }
gw-store = { path = "../store" }
gw-traits = { path = "../traits" }
gw-rpc-client = { path = "../rpc-client" }
gw-config = { path = "../config" }
gw-utils = { path = "../utils" }
gw-dynamic-config = { path = "../dynamic-config" }
gw-p2p-network = { path = "../p2p-network" }
gw-tx-filter = { path = "../tx-filter" }
gw-telemetry = { path = "../telemetry" }
futures = { version = "0.3"}
tokio = "1"
anyhow = "1.0"
log = "0.4"
hex = "0.4"
async-trait = "0.1"
tracing = { version = "0.1", features = ["attributes"] }
tentacle = "0.4.0"
bytes = "1.2.1"

[dev-dependencies]
tempfile = "3.2"
rand = "0.8"
